--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,9 @@
       "no-underscore-dangle": "off",
       "no-restricted-globals": "off",
       "no-param-reassign": "off",
-      "no-console": "off"
+      "no-console": "off",
+      "consistent-return": "warn",
+      "no-prototype-builtins": "warn",
+      "import/prefer-default-export": "off"
     }
 }
