--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       "no-console": "off",
       "consistent-return": "warn",
       "no-prototype-builtins": "warn",
-      "import/prefer-default-export": "off"
+      "import/prefer-default-export": "off",
+      "class-methods-use-this": "off"
     }
 }
