--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,10 @@
     },
     "extends": [
         "airbnb-base",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:codeceptjs/recommended"
     ],
-    "plugins": ["prettier"],
+    "plugins": ["prettier", "codeceptjs"],
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
@@ -26,6 +27,7 @@
       "func-names": "warn",
       "no-unused-vars": "warn",
       "no-underscore-dangle": "off",
+      "no-await-in-loop": "warn",
       "no-restricted-globals": "off",
       "no-param-reassign": "off",
       "no-console": "off",
