--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "karma start",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -15,9 +16,11 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@codeceptjs/configure": "^0.6.2",
     "@types/jasmine": "^3.7.7",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "codeceptjs": "^3.0.7",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "eslint": "^7.28.0",
@@ -25,6 +28,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-codeceptjs": "^1.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -42,6 +46,7 @@
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.3.1",
+    "puppeteer": "^10.1.0",
     "sass": "^1.22.10",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.2.1",
