--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "karma start",
+    "build-image": "node sharp.js",
     "lint": "eslint ./src",
     "e2e": "codeceptjs run --steps"
   },
@@ -35,6 +36,8 @@
     "file-loader": "^6.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.3.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.5.0",
     "karma": "^5.1.0",
@@ -49,6 +52,7 @@
     "puppeteer": "^10.1.0",
     "sass": "^1.22.10",
     "sass-loader": "^7.2.0",
+    "sharp": "^0.28.3",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
